@@ -4,6 +4,7 @@ version 0.8.1:
    all AIML files should use UNIX-style paths inside their "system" elements.
  - Fixed crashes under Windows9X when a "system" element is executed when
    w9xpopen.exe is unavailable.
+ - Re-piped most errors and warnings to go to stderr instead of stdout.
 
 version 0.8:
  - Removed support for non-standard "mode" attribute in "system" elements.
